# freq_filtering_and_bandpower

./: README.md  main.py  pyproject.toml  requirements.txt  viz_app.py
assets/: bandpower.md  sample-ant-Fp1-raw.fif
