[project]
name = "freq-and-bandpower"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.0.4",
    "dash-bootstrap-components>=2.0.2",
    "gunicorn>=23.0.0",
    "mne>=1.9.0",
    "numpy>=2.2.5",
    "scipy>=1.15.2",
]
